--- a/style/statistics.css
+++ b/style/statistics.css
@@ -251,16 +251,35 @@ background-color: grey;
   }
 }
 
+#clearbtn{
+  width: 10em;
+  height: 3em;
+  border-radius: 5em;
+  margin-left: 40%;
+  margin-top: 4em;
+  background-color: red;
+  color: white;
 
-
-#myChart{
-
- 
+  cursor: pointer;
+  text-align: center;
+  transition: all 0.5s;
 }
 
+
 .divchart{
+  width: 40em;
+  height: 40em;
   background-color: white;
   margin-top: 2em;
   border-radius: 1em;
 }
+
+.divchart2{
+  width: 60em;
+  height: 40em;
+  background-color: white;
+  margin-top: 2em;
+  border-radius: 1em;
+}
+
 
